Concluded change about generating public key pair, and corrected some bugs.